fix: change engineered__container to top align (flex-start)

--- a/website/src/components/EngineeredPrecision/EngineeredPrecision.module.scss
+++ b/website/src/components/EngineeredPrecision/EngineeredPrecision.module.scss
@@ -105,7 +105,7 @@
 .engineered__container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   max-width: 100%;
   margin: 0 auto;
   padding: 0 20px;
